# PythonProject9.2

./: README.md  pyproject.toml
src/: main.py
